--- a/index.html
+++ b/index.html
@@ -9,58 +9,32 @@
 *{box-sizing:border-box;margin:0;padding:0}
 body{
     font-family:Arial;
-    margin:auto;
     background:#f5f5f5;
     max-width:500px;
+    margin:auto;
     padding:8px;
     font-size:14px;
 }
-h2{text-align:center;margin-bottom:6px;font-size:18px}
+h2{text-align:center;margin-bottom:8px;font-size:18px}
 
 button{
     border:none;
-    border-radius:8px;
-    font-size:14px;
-    cursor:pointer;
-}
-
-#msg{
-    position:fixed;
-    top:15px;
-    left:50%;
-    transform:translateX(-50%);
-    background:#333;
-    color:white;
-    padding:8px;
     border-radius:6px;
-    display:none;
-    z-index:999;
+    padding:6px;
     font-size:13px;
 }
 
-#masalar{
-    display:grid;
-    grid-template-columns:repeat(4,1fr);
-    gap:6px;
+#urunler button{
+    width:100%;
+    margin:3px 0;
+    background:#ddd;
 }
 
-.masa-btn{
-    padding:12px 0;
-    font-size:14px;
-    color:white;
+#dagitim{
+    margin-top:8px;
 }
 
-#panel{
-    display:none;
-    background:white;
-    padding:8px;
-    border-radius:8px;
-}
-
-.menu-item{
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
+.kart{
     background:#eee;
     padding:6px;
     margin:4px 0;
@@ -68,230 +42,149 @@ button{
     font-size:13px;
 }
 
-.adet-kontrol{
-    display:flex;
-    align-items:center;
-    gap:6px;
-}
-
-.adet-kontrol button{
-    width:28px;
-    height:28px;
-    font-size:16px;
-    background:#ddd;
-}
-
-.siparis-kart{
-    background:#eee;
-    padding:8px;
-    margin:5px 0;
-    border-radius:6px;
-    font-size:13px;
+.adet-btn{
+    padding:4px 6px;
+    font-size:12px;
+    background:#27ae60;
+    color:white;
 }
 </style>
 </head>
 
 <body>
 
-<div id="msg"></div>
-
 <h2>🍽 Garson Defteri</h2>
 
-<button onclick="dagitimEkrani()" 
-style="width:100%;padding:8px;background:#3498db;color:white;margin-bottom:6px">
-📋 Dağıtım
-</button>
+<div id="siparisGiris">
+<select id="masaSelect" style="width:100%;padding:6px;margin-bottom:6px">
+<option value="">Masa Seç</option>
+</select>
 
-<div id="masalar"></div>
+<div id="urunler"></div>
 
-<div id="panel">
-<button onclick="anaSayfa()" 
-style="width:100%;padding:6px;background:#777;color:white;margin-bottom:6px">
-⬅ Geri
+<button onclick="kaydet()" 
+style="width:100%;margin-top:6px;background:#2ecc71;color:white">
+Siparişi Kaydet
 </button>
-<div id="masaTitle" style="text-align:center;font-weight:bold;margin-bottom:6px"></div>
-<div id="icerik"></div>
 </div>
+
+<hr style="margin:8px 0">
+
+<h3 style="text-align:center">📋 Dağıtım</h3>
+<div id="dagitim"></div>
 
 <script>
 
-const MASA_SAYISI = 20;
-let aktifMasa=null;
-let temp={};
+const MASA_SAYISI=20;
 
-const menuData={
-"Menüler":[
+const urunList=[
 "Lahmacun Menü",
 "Tavuk Şiş Menü",
 "Beyti Menü",
-"Adana Menü"
-],
-"Pideler":[
+"Adana Menü",
 "Kıymalı Pide",
 "Kaşarlı Pide",
 "Kuşbaşılı Pide",
 "Kuşbaşı Kaşarlı Pide",
 "Karışık Pide"
-]
-};
+];
 
-function mesaj(text){
-let box=document.getElementById("msg");
-box.innerText=text;
-box.style.display="block";
-setTimeout(()=>box.style.display="none",1500);
-}
+let temp={};
 
-function anaSayfa(){
-document.getElementById("panel").style.display="none";
-document.getElementById("masalar").style.display="grid";
-renderMasalar();
-}
-
-function renderMasalar(){
-let db=JSON.parse(localStorage.getItem("siparisler")||"{}");
-let html="";
+function init(){
+let masaSelect=document.getElementById("masaSelect");
 for(let i=1;i<=MASA_SAYISI;i++){
-let sip=db["masa"+i];
-let renk=sip?"#2ecc71":"#e74c3c";
-html+=`
-<button class="masa-btn"
-style="background:${renk}"
-onclick="masaAc(${i})">
-${i}
+masaSelect.innerHTML+=`<option value="${i}">Masa ${i}</option>`;
+}
+
+let urunDiv=document.getElementById("urunler");
+urunList.forEach(u=>{
+urunDiv.innerHTML+=`
+<button onclick="adetArt('${u}')">
+${u} (<span id="${idYap(u)}">0</span>)
 </button>`;
-}
-document.getElementById("masalar").innerHTML=html;
-}
-
-function masaAc(masa){
-aktifMasa=masa;
-temp={};
-
-document.getElementById("masalar").style.display="none";
-document.getElementById("panel").style.display="block";
-document.getElementById("masaTitle").innerText="Masa "+masa;
-
-let db=JSON.parse(localStorage.getItem("siparisler")||"{}");
-let sip=db["masa"+masa];
-
-if(sip){
-let html="";
-for(let urun in sip.urunler){
-let u=sip.urunler[urun];
-html+=`
-<div class="siparis-kart">
-<b>${urun}</b><br>
-${u.teslim} / ${u.adet}
-<br>
-<button onclick="teslimEt(${masa},'${urun}')"
-style="width:100%;margin-top:4px;background:#27ae60;color:white;padding:4px">
-✔ Teslim
-</button>
-</div>`;
-}
-document.getElementById("icerik").innerHTML=html;
-return;
-}
-
-let html="";
-for(let kategori in menuData){
-menuData[kategori].forEach(item=>{
-let miktar=temp[item]||0;
-let safeId=item.replace(/[^a-zA-Z0-9]/g,"_");
-html+=`
-<div class="menu-item">
-<span>${item}</span>
-<div class="adet-kontrol">
-<button onclick="adet('${item}',-1)">-</button>
-<span id="${safeId}">${miktar}</span>
-<button onclick="adet('${item}',1)">+</button>
-</div>
-</div>`;
 });
-}
-html+=`
-<button onclick="kaydet()" 
-style="width:100%;padding:6px;background:#2ecc71;color:white;margin-top:6px">
-✔ Sipariş
-</button>`;
-document.getElementById("icerik").innerHTML=html;
+
+dagitimGoster();
 }
 
-function adet(item,deg){
-if(!temp[item]) temp[item]=0;
-temp[item]+=deg;
-if(temp[item]<0) temp[item]=0;
-let safeId=item.replace(/[^a-zA-Z0-9]/g,"_");
-let el=document.getElementById(safeId);
-if(el) el.innerText=temp[item];
+function idYap(text){
+return text.replace(/[^a-zA-Z0-9]/g,"_");
+}
+
+function adetArt(urun){
+if(!temp[urun]) temp[urun]=0;
+temp[urun]++;
+document.getElementById(idYap(urun)).innerText=temp[urun];
 }
 
 function kaydet(){
+let masa=document.getElementById("masaSelect").value;
+if(!masa) return alert("Masa seç");
+
 let secilen=Object.entries(temp).filter(([k,v])=>v>0);
-if(secilen.length===0){
-mesaj("Ürün seçmedin");
-return;
-}
+if(secilen.length===0) return alert("Ürün yok");
+
 let db=JSON.parse(localStorage.getItem("siparisler")||"{}");
-let now=new Date();
-let zaman=now.toLocaleTimeString("tr-TR",{hour:"2-digit",minute:"2-digit"});
-let urunObj={};
+
+if(!db["masa"+masa]) db["masa"+masa]={};
+
 secilen.forEach(([urun,adet])=>{
-urunObj[urun]={adet:adet,teslim:0};
+if(!db["masa"+masa][urun]) db["masa"+masa][urun]=0;
+db["masa"+masa][urun]+=adet;
 });
-db["masa"+aktifMasa]={urunler:urunObj,zaman:zaman};
+
 localStorage.setItem("siparisler",JSON.stringify(db));
-mesaj("Kaydedildi");
-anaSayfa();
+
+temp={};
+urunList.forEach(u=>{
+document.getElementById(idYap(u)).innerText=0;
+});
+
+dagitimGoster();
 }
 
-function teslimEt(masa,urun){
+function dagitimGoster(){
 let db=JSON.parse(localStorage.getItem("siparisler")||"{}");
-let sip=db["masa"+masa];
-if(!sip)return;
-let u=sip.urunler[urun];
-if(u.teslim<u.adet) u.teslim++;
-let hepsiBitti=Object.values(sip.urunler)
-.every(x=>x.teslim===x.adet);
-if(hepsiBitti){
-delete db["masa"+masa];
-mesaj("Masa tamamlandı");
-}
-localStorage.setItem("siparisler",JSON.stringify(db));
-masaAc(masa);
-}
-
-function dagitimEkrani(){
-let db=JSON.parse(localStorage.getItem("siparisler")||"{}");
-document.getElementById("masalar").style.display="none";
-document.getElementById("panel").style.display="block";
-document.getElementById("masaTitle").innerText="Dağıtım";
-
 let html="";
+
+urunList.forEach(urun=>{
+let satir="";
 for(let masa in db){
-let sip=db[masa];
-for(let urun in sip.urunler){
-let u=sip.urunler[urun];
-if(u.teslim<u.adet){
-html+=`
-<div class="siparis-kart">
-<b>${urun}</b><br>
-${masa} → ${u.adet-u.teslim}
-<br>
-<button onclick="teslimEt(${masa.replace('masa','')},'${urun}')"
-style="width:100%;margin-top:4px;background:#27ae60;color:white;padding:4px">
-✔ Teslim
+if(db[masa][urun]){
+satir+=`
+<div class="kart">
+${urun} → ${masa.replace("masa","M")} 
+(${db[masa][urun]})
+<button class="adet-btn"
+onclick="teslim('${masa}','${urun}')">
+✔
 </button>
 </div>`;
 }
 }
-}
-if(html==="") html="<p style='text-align:center'>Tüm siparişler bitti</p>";
-document.getElementById("icerik").innerHTML=html;
+html+=satir;
+});
+
+document.getElementById("dagitim").innerHTML=html;
 }
 
-anaSayfa();
+function teslim(masa,urun){
+let db=JSON.parse(localStorage.getItem("siparisler")||"{}");
+
+db[masa][urun]--;
+if(db[masa][urun]<=0){
+delete db[masa][urun];
+}
+if(Object.keys(db[masa]).length===0){
+delete db[masa];
+}
+
+localStorage.setItem("siparisler",JSON.stringify(db));
+dagitimGoster();
+}
+
+init();
 
 </script>
 </body>
