--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
 
-    <h2>🍽 GARSON DEFTERİ PRO</h2>
+    <h2>🍽 DİVAN RESTORAN</h2>
 
     <button class="aksiyon-btn ozet-btn" onclick="ozetGoster()">📋 TOPLAM MUTFAK LİSTESİ</button>
 
@@ -285,3 +285,4 @@
 </script>
 </body>
 </html>
+
